# BinanceAccounting

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
config/: config.example.toml
src/binance_accounting/: __main__.py  binance_client.py  diff.py  main.py  sheets_writer.py  snapshot_store.py  valuation.py
