[project]
name = "binance-accounting"
version = "0.1.0"
description = "Daily Binance asset snapshot → Google Sheet"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[project.scripts]
binance-accounting = "binance_accounting.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
